--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "paths": {
           "@modules/*": ["modules/*"],
           "@config/*": ["config/*"],
-          "@shared/*": ["shared/*"]
+          "@shared/*": ["shared/*"],
+          "@middleware/*": ["middleware/*"],
       },
 
       "esModuleInterop": true,
