--- a/package.json
+++ b/package.json
@@ -5,28 +5,34 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node-dev ___PATH___",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules ___PATH___",
+    "start": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules ./src/index.ts",
     "test": "jest"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-joi-validation": "^4.0.3",
     "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.3",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.28",
+    "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^7.3.1",
