--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-joi-validation": "^4.0.3",
     "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
