--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^26.0.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.28",
+    "@types/mongoose-paginate": "^5.0.8",
     "@types/multer": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
