--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^3.23.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20",
