--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "explorer.compactFolders": false,
     "[javascript]": {
         "editor.codeActionsOnSave": {
             "source.fixAll.eslint": true
