--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "ts-node-dev ./src/index.ts",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules ./src/index.ts",
-    "test": "jest"
+    "test": "NODE_ENV=test jest --watchAll --verbose --detectOpenHandles"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,6 +27,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/factory-girl": "^5.0.2",
+    "@types/faker": "^4.1.12",
     "@types/hapi__joi": "^17.1.3",
     "@types/helmet": "^0.0.47",
     "@types/jest": "^26.0.3",
@@ -34,6 +36,7 @@
     "@types/mongoose": "^5.7.28",
     "@types/mongoose-paginate": "^5.0.8",
     "@types/multer": "^1.4.3",
+    "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "^7.3.1",
@@ -45,8 +48,12 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jest": "^26.1.0",
+    "mongodb-memory-server": "^6.6.1",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.1",
     "ts-node-dev": "^1.0.0-pre.49",
     "tsconfig-paths": "^3.9.0",
