--- a/package.json
+++ b/package.json
@@ -8,53 +8,53 @@
     "test": "NODE_ENV=test jest --watchAll --verbose --detectOpenHandles"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "celebrate": "^12.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-async-handler": "^1.1.4",
-    "helmet": "^3.23.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.20",
-    "mongoose-paginate": "^5.0.3",
-    "multer": "^1.4.2"
+    "bcryptjs": "2.4.3",
+    "celebrate": "12.1.1",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "express-async-errors": "3.1.1",
+    "express-async-handler": "1.1.4",
+    "helmet": "3.23.2",
+    "jsonwebtoken": "8.5.1",
+    "mongoose": "5.9.20",
+    "mongoose-paginate": "5.0.3",
+    "multer": "1.4.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/factory-girl": "^5.0.2",
-    "@types/faker": "^4.1.12",
-    "@types/hapi__joi": "^17.1.3",
-    "@types/helmet": "^0.0.47",
-    "@types/jest": "^26.0.3",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.28",
-    "@types/mongoose-paginate": "^5.0.8",
-    "@types/multer": "^1.4.3",
-    "@types/supertest": "^2.0.9",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "factory-girl": "^5.0.4",
-    "faker": "^4.1.0",
-    "jest": "^26.1.0",
-    "mongodb-memory-server": "^6.6.1",
-    "prettier": "^2.0.5",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.1.1",
-    "ts-node-dev": "^1.0.0-pre.49",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.5"
+    "@types/bcryptjs": "2.4.2",
+    "@types/cors": "2.8.6",
+    "@types/express": "4.17.6",
+    "@types/factory-girl": "5.0.2",
+    "@types/faker": "4.1.12",
+    "@types/hapi__joi": "17.1.3",
+    "@types/helmet": "0.0.47",
+    "@types/jest": "26.0.3",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/mongoose": "5.7.28",
+    "@types/mongoose-paginate": "5.0.8",
+    "@types/multer": "1.4.3",
+    "@types/supertest": "2.0.9",
+    "@typescript-eslint/eslint-plugin": "3.4.0",
+    "@typescript-eslint/parser": "3.4.0",
+    "eslint": "7.3.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "factory-girl": "5.0.4",
+    "faker": "4.1.0",
+    "jest": "26.1.0",
+    "mongodb-memory-server": "6.6.1",
+    "prettier": "2.0.5",
+    "supertest": "4.0.2",
+    "ts-jest": "26.1.1",
+    "ts-node-dev": "1.0.0-pre.49",
+    "tsconfig-paths": "3.9.0",
+    "typescript": "3.9.5"
   }
 }
