--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore-watch node_modules ./src/index.ts",
-    "test": "NODE_ENV=test jest --watchAll --verbose --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test jest --watchAll --verbose --detectOpenHandles"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -37,6 +37,7 @@
     "@types/supertest": "2.0.9",
     "@typescript-eslint/eslint-plugin": "3.4.0",
     "@typescript-eslint/parser": "3.4.0",
+    "cross-env": "^7.0.2",
     "eslint": "7.3.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
